--- a/gradle.properties
+++ b/gradle.properties
@@ -19,13 +19,13 @@ mixin_version=0.8.5
 mixin_extras_version=0.3.6
 
 # mod
-mod_id=replacememodid
-mod_name=ReplaceMeModName
-mod_version=ReplaceMe.Mod.Version
-mod_author=["ReplaceMeAuthor"]
-mod_description=ReplaceMeModDescription
-mixin_loader_class=replacememodid.ReplaceMeModNamePlugin
+mod_id=prrandomthings
+mod_name=ProjectReflection Random Things
+mod_version=1.0.0
+mod_author=["tong-ge"]
+mod_description=Random things from Project Reflection
+mixin_loader_class=prrandomthings.PRRandomThingsPlugin
 
 # dependencies
-twelvefold_booter_version=6893619
+twelvefold_booter_version=7117493
 jei_version=4.16.1.301
